add arraymail, listener in btn

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </div>
     <button id="btn-mail" class="btn btn-primary">Log-in</button>
   </div>
+  <div class="alert"></div>
 
   <script src="js/script.js"></script>
 </body>
