--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container py-3">
+    <h2 class="my-3">Controllo Utente registrato: </h2>
     <div class="form-floating mb-3">
       <input type="email" class="form-control" id="input-mail" placeholder="name@example.com" name="input-user"
         value="">
       <label for="floatingInput">Inserisci la tua mail</label>
     </div>
     <button id="btn-mail" class="btn btn-primary">Log-in</button>
+    <div class="alert d-none my-2" id="result-mail"></div>
   </div>
-  <div class="alert"></div>
+  
+
+  </div>
 
   <script src="js/script.js"></script>
 </body>
