improved game, add dice colors

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 
       <!-- div d-none -->
 
-      <div class="" id="result-dice">
+      <div class="d-none" id="result-dice">
         <div class="container-fluid">
           <div class="row">
             <div class="col-6">
               <h3>Il tuo Punteggio</h3>
-              <div class="" id=""></div>
+              <div class="" id="my-result-dice"></div>
             </div>
             <div class="col-6">
               <h3>Punteggio avversario</h3>
-              <div class="" id=""></div>
+              <div class="" id="cpu-result-dice"></div>
             </div>
 
           </div>
